--- a/r4babs2/week-1/study_before_workshop.qmd
+++ b/r4babs2/week-1/study_before_workshop.qmd
@@ -5,11 +5,12 @@ toc: true
 toc-location: right
 ---
 
-1. 📖 Read [The logic of hyothesis testing](https://3mmarand.github.io/comp4biosci/logic_hyopthesis_testing.html) 
+1.  📖 Read [The logic of hyothesis
+    testing](https://3mmarand.github.io/comp4biosci/logic-hypothesis-testing.html)
 
-2. 📖 Read [Confidence Intervals](https://3mmarand.github.io/comp4biosci/confidence_intervals.html) 
+2.  📖 Read [Confidence
+    Intervals](https://3mmarand.github.io/comp4biosci/confidence-intervals.html)
 
-3. If you have not yet done so, I recommend setting up the Virtual 
-   Desktop Service. [Instructions are in BABS1](../../r4babs1/week-6/workshop.html)
-
-
+3.  If you have not yet done so, I recommend setting up the Virtual
+    Desktop Service. [Instructions are in
+    BABS1](../../r4babs1/week-6/workshop.html)
