--- a/r4babs2/week-2/workshop.qmd
+++ b/r4babs2/week-2/workshop.qmd
@@ -65,11 +65,8 @@ Record your answers in your script for future reference.
 ![](images/do_in_R.png) Make an RStudio project for this workshop by
 clicking on the drop-down menu on top right where it says
 `Project: (None)` and choosing New Project, then New Directory, then New
-Project. Navigate to the `data-analysis-in-r-2`[^1] folder and name the
+Project. Navigate to the `data-analysis-in-r-2` folder and name the
 RStudio Project `week-2`.
-
-[^1]: You made this folder in [Week
-    1.](../week-1/workshop.html#getting-started)
 
 ![](images/do_in_R.png) Make new folders called `data-raw` and
 `figures`. You can do this on the Files Pane by clicking New Folder and
@@ -110,7 +107,8 @@ excel_sheets(file)
 
 # You might want to open th file in excel to make sure you know what is in it. 
 
-# I'm a bit lazy - and less worried by being wrong - so will just guess the are data in the one named sheet. If I guess wrong, then I might open the file!
+# I'm a bit lazy - and less worried by being wrong - so will just guess the 
+# are data in the one named sheet. If I guess wrong, then I might open the file!
 plant <- read_excel(file, sheet = "plant")
 
 ```
@@ -339,28 +337,6 @@ ggplot(plant, aes(x = day, y = mass)) +
 We have to tell `annotate()` what type of geom we want - `text` in this
 case, - where to put it, and the text we want to appear.
 
-```{r}
-#| include: false
-
-#---BONUS CODING ANSWER---
-# I'm not expecting you to know about this but it's a neat trick. The glue package allows
-# us to use R objects in strings so their values are printed.
-ggplot(plant, aes(x = day, y = mass)) +
-  geom_point() +
-  geom_smooth(method = "lm", 
-              se = FALSE, 
-              colour = "black") +
-  scale_x_continuous(name = "Day",
-                     limits = c(0, 65),
-                     expand = c(0,0)) +
-  scale_y_continuous(name = "Mass (g)",
-                     limits = c(0, 120),
-                     expand = c(0,0)) +
-  annotate("text", x = 20, y = 110, 
-           label = glue::glue("mass = {b1} day {b0}")) +
-  theme_classic()
-```
-
 ![](images/do_in_R.png) Improve the axes. You may need to refer back
 [Changing the
 axes](../../r4babs1/week-7/workshop.html#changing-the-axes) from the
@@ -370,7 +346,6 @@ Week 7 workshop in BABS1 [@rand2023]
 #| include: false
 
 #---CODING ANSWER---
-#
 
 ggplot(plant, aes(x = day, y = mass)) +
   geom_point() +
@@ -389,6 +364,30 @@ ggplot(plant, aes(x = day, y = mass)) +
 
 
 # note that we need to use the continuous versions of both scale_
+```
+
+```{r}
+#| include: false
+
+#---BONUS CODING ANSWER---
+# I'm not expecting you to know about this but it's a neat trick. 
+# The glue package allows
+# us to use R objects in strings so their values are printed. The R object
+# is put in curly brackets.
+ggplot(plant, aes(x = day, y = mass)) +
+  geom_point() +
+  geom_smooth(method = "lm", 
+              se = FALSE, 
+              colour = "black") +
+  scale_x_continuous(name = "Day",
+                     limits = c(0, 65),
+                     expand = c(0,0)) +
+  scale_y_continuous(name = "Mass (g)",
+                     limits = c(0, 120),
+                     expand = c(0,0)) +
+  annotate("text", x = 20, y = 110, 
+           label = glue::glue("mass = {b1} day {b0}")) +
+  theme_classic()
 ```
 
 ![](images/do_in_R.png) Save your figure to your `figures` folder. Make
@@ -435,22 +434,28 @@ ggsave("figures/plant-growth.png",
 
 ## Look after future you!
 
-Make life easier for future you by going back through your code and
-tidying up.
+Future you will submit scripts for the assessment and these need to be
+organised, well-formatted, concise and well-commented so others can 
+understand what you did and why.
 
 You might need to:
 
 -   collect together library statements at the beginning of the code
 -   edit your comments for clarity and include a paragraph explaining
     what the analysis is about
+    add code section headers (Ctrl+Shift+R)
 -   rename variables for consistency or clarity
 -   remove house keeping or exploratory code or mark it for later
     removal
--   restyle code, add code section headers etc
+-   restyle code indentation (Ctrl+i) if needed
+-   check whitespace and line length. 
+
+You will find it useful to change some options in RStudio to make
+your life easier. Revisit [Changing some defaults to make life easier](https://3mmarand.github.io/comp4biosci/first-steps-rstudio.html#changing-some-defaults-to-make-life-easier).
 
 If you need to make additional notes that do not belong in the script,
-you can add them a text file called README.txt that future you will know
-what to do with!
+you can add them a text file called `README.txt` that future you -- and anyone
+else will know exactly what to do with!
 
 You're finished!
 
@@ -471,9 +476,9 @@ visible on the webpage.
 
 The `workshop.qmd` file is the file I use to compile the practical. Qmd
 stands for Quarto markdown. It allows code and ordinary text to be
-interweaved to produce well-formatted reports including webpages. [View
-the Qmd in
-Browser](https://github.com/3mmaRand/R4BABS/blob/main/r4babs2/week-2/workshop.qmd).
+interweaved to produce well-formatted reports including webpages.  View
+the source code for this workshop using the `</> Code` button at the top
+of the page.
 Coding and thinking answers are marked with `#---CODING ANSWER---` and
 `#---THINKING ANSWER---`
 
